# Chatbot_KPI_Pipeline

./: .dockerignore  .gitignore  Dockerfile  Plan.md  README.md  pyproject.toml  requirements.txt
src/: dash_app.py  database.py  ingest.py  process.py  streamlit_app.py
src/assets/: custom.css
tests/: test_dash_app.py  test_database.py  test_ingest.py  test_process.py  test_streamlit_app.py
